--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,13 +1,19 @@
 {
-  "name": "jordibot-ui",
+  "name": "echomedia-frontend",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
-    "start": "react-scripts start"
+    "dev": "vite",
+    "build": "vite build"
   },
   "dependencies": {
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-scripts": "^5.0.0"
+    "react-dom": "^18.0.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
+    "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.21",
+    "tailwindcss": "^4.1.11",
+    "vite": "^5.0.0"
   }
 }
