--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,14 +6,14 @@
     "build": "vite build"
   },
   "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.11",
     "@vitejs/plugin-react": "^4.0.0",
-    "autoprefixer": "^10.4.21",
-    "tailwindcss": "^4.1.11",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.3.0",
     "vite": "^5.0.0"
   }
 }
