--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "echomedia-frontend",
   "version": "1.0.0",
@@ -11,9 +12,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0",
-    "tailwindcss": "^3.3.0",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "@tailwindcss/postcss": "^0.1.0",
+    "tailwindcss": "^3.3.2",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24"
   }
 }
