--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^5.0.0",
-    "@tailwindcss/postcss": "^0.1.0",
-    "tailwindcss": "^3.3.2",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24"
+    "postcss": "^8.4.21",
+    "@tailwindcss/postcss": "^0.1.0",
+    "tailwindcss": "^3.3.0",
+    "vite": "^5.0.0"
   }
 }
