--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,14 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
+ 
+
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^5.0.0"
+  "@vitejs/plugin-react": "^4.0.0",     
+  "vite": "^5.4.19",
+  "tailwindcss": "^3.4.0",  
+  "postcss": "^8.4.0",
+  "autoprefixer": "^10.4.0"
   }
+
 }
