--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "lucide-react": "^0.536.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.7.1"
+    "react-router-dom": "^7.7.1",
+    "recharts": "^3.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
